--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading-indicators": "^1.0.0",
     "tailwindcss": "^4.1.4"
-    },
+  },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
